--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,55 +1,49 @@
-html,
-body {
+html,body{
   margin: 0;
   padding: 0;
-  height: 100%;
   width: 100%;
-  background: url('/assets/images/login_bg.jpg') no-repeat center;
+  height: 100%;
+  background: url(../images/login_bg.jpg) no-repeat center;
+  /* cover 按比例调整背景图片 */
   background-size: cover;
 }
-
-.loginAndRegBox {
+/* 登录页面 */
+.logweb{
   width: 400px;
   height: 310px;
-  background-color: #fff;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+background-color: #fff;
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50% ,-50%);
 }
-
-.title-box {
+/* 注册页面 */
+.log_title{
   height: 60px;
-  background: url('/assets/images/login_title.png') no-repeat center;
-}
+  background: url(../images/login_title.png)no-repeat center;
 
-.reg-box {
+}
+.reg-box{
   display: none;
 }
-
-.layui-form {
+.layui-form{
   padding: 0 30px;
 }
-
-.links {
+.links{
   display: flex;
   justify-content: flex-end;
 }
-
-.links a {
+.links a{
   font-size: 12px;
 }
-
-.layui-form-item {
+.layui-form-item{
   position: relative;
 }
-
-.layui-icon {
+.layui-icon{
   position: absolute;
   left: 10px;
   top: 10px;
 }
-
-.layui-input {
-  padding-left: 32px;
+#zhmm{
+  padding-left: 30px;
 }
