--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,62 +1,64 @@
-.layui-footer {
+*{
+  box-sizing: border-box;
+}
+.layui-footer{
   text-align: center;
   font-size: 12px;
 }
-
-.iconfont {
+.iconfont{
   margin-right: 8px;
 }
-
-.layui-icon {
+.layui-icon{
   margin-right: 8px;
   margin-left: 20px;
 }
-
-iframe {
-  width: 100%;
+iframe{
   height: 100%;
+  width: 100%;
 }
-
-.layui-body {
-  overflow: hidden;
-}
-
-a {
+a{
   transition: none !important;
 }
 
-.userinfo {
+.uninfor{
   height: 60px;
-  line-height: 60px;
   text-align: center;
   font-size: 12px;
-  user-select: none;
+  line-height: 60px;
+  /* 不让他点击 */
+ -webkit-user-select: none;
+    -moz-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
+   
 }
-
-.layui-side-scroll .userinfo {
-  border-bottom: 1px solid #282b33;
-}
-
-.layui-nav-img {
-  width: 40px;
-  height: 40px;
-}
-
-.text-avatar {
+.text_wen{
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: #009688;
   border-radius: 50%;
+  background-color:#009688 ;
   line-height: 40px;
+  font-size: 16px;
   text-align: center;
-  font-size: 20px;
-  color: #fff;
   position: relative;
-  top: 4px;
-  margin-right: 10px;
+  top: 2px;
+  
 }
+#text_tou{
+  margin-bottom: 20px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+  
 
-.layui-nav-item a {
-  font-size: 12px;
+}
+.layui-nav-img{
+  width: 40px;
+  height: 40px;
+}
+.layui-side-scroll .uninfor{
+  border-bottom: 1px solid #282d33;
+}
+.layui-body{
+  overflow: hidden;
 }
