--- a/assets/css/user/user_info.css
+++ b/assets/css/user/user_info.css
@@ -1,14 +1,16 @@
-html,
-body {
-  margin: 0;
-  padding: 0;
+*{
+padding: 0;
+margin: 0;
+
 }
 
-body {
-  background-color: #f2f3f5;
+body{
   padding: 15px;
+  background-color: #f2f3f5;
 }
-
-.layui-form {
-  width: 500px;
+.layui-card{
+  margin: 15px;
+}
+.layui-input-block{
+  width: 400px;
 }
