--- a/assets/css/user/user_pwd.css
+++ b/assets/css/user/user_pwd.css
@@ -1,14 +1,15 @@
-html,
-body {
+*{
   margin: 0;
   padding: 0;
 }
 
-body {
+body{
   padding: 15px;
   background-color: #f2f3f5;
 }
-
-.layui-form {
+.layui-card{
+  margin: 15px;
+}
+.layui-form{
   width: 500px;
 }
